--- a/app/src/main/res/layout/transaction_container.xml
+++ b/app/src/main/res/layout/transaction_container.xml
@@ -9,21 +9,21 @@
         android:id="@+id/tvDate"
         android:layout_weight="0.3"
         android:layout_margin="10dp"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvDesc"
         android:layout_margin="10dp"
         android:layout_weight="0.6"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvAmount"
         android:layout_margin="10dp"
         android:layout_weight="0.1"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 
