--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="All Transactions"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="20dp"/>
